WIP: rename container, simplify css, fix left side panels alignment & zindex

--- a/histogramModule/histogram.css
+++ b/histogramModule/histogram.css
@@ -1,42 +1,16 @@
 /* ------------- module dygraph charts pour histogramme WOS ----------------- */
 
-/*
-#mainform{
-  margin-top: .3em;
-  margin-bottom: .3em;
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-.ui-menu, .ui-menu-item {
-  hack for autocomplete menu to end up *over* modal:z1000
-  z-index: 1100;
-}
-
-.ui-menu-item a{
-    color: #96f226;
-    border-radius: 0px;
-    border: 1px solid #454545;
-}
-*/
-
-#search_histogram_wrapper{
-  margin: 0 ;
-  /* overwrite bootstrap's
-   * grid element padding*/
-  padding-right: 2em ;
-  margin-left: -.5em ;
-}
 /* graph div */
-#search_histogram{
-  min-height: 15em ;
-  font-size: 85%;
+#search_histogram {
+  min-height: 12em ;
+  font-size: 75%;
   background-color: #F9F9F9 ;
   display: none;
-
+  position:relative;
+  padding: 0 15px;
+  max-width: 100%;
 }
-/* dygraph internal canvas */
-#search_histogram canvas{
-  margin: 0 ;
-  padding: 0;
+#search_histogram canvas {
+  padding-right: 1em;
+  margin-left: -1em;
 }
